--- a/index.html
+++ b/index.html
@@ -54,41 +54,52 @@ s0.parentNode.insertBefore(s1,s0);
 	<div class="col span_1_of_3"><div class="modules"><img src="images/m1-photo.jpg" width="1680" height="840" alt=""/></div></div>
 	<div class="col span_2_of_3">
 	  <div class="modules">
-	    <h3><a href="https://360.articulate.com/review/content/d0ef2cc6-08bc-4b2c-87fc-4af0faa43334/review">MODULE 1: TB M&amp;E: An Overview</a></h3>
-	    <p>Time to Complete: 15 minutes</p>
-	    <p>Topics Covered: Basic epidemiology of TB, TB case definitions, global TB strategies, M&amp;E frameworks</p>
+	    <h3>MODULE 1: TB M&amp;E: An Overview</h3>
+	    <p><strong id="yui_3_17_2_1_1686784079798_20">🕓</strong><strong> Time to Complete</strong>: 15 minutes</p>
+	    <p><strong>Topics Covered</strong>: Basic epidemiology of TB, TB case definitions, global TB strategies and targets, M&amp;E frameworks</p>
+		  <a class="button" href="https://360.articulate.com/review/content/d0ef2cc6-08bc-4b2c-87fc-4af0faa43334/review">View Module</a>
 	  </div></div>
 	</div> 
-	 	 	 <div class="section group">
+	 	 	<hr> <div class="section group">
 	<div class="col span_1_of_3"><div class="modules"><img src="images/placeholder-photo.png" width="1680" height="840" alt=""/></div></div>
 	<div class="col span_2_of_3"><div class="modules">
       <h3>MODULE 2: Use Performance-Based M&amp;E Framework to Stregthen TB Programs</h3>
-      <p>Time to Complete: 15 minutes<br>
+      <p><strong id="yui_3_17_2_1_1686784079798_">🕓</strong><strong> Time to Complete</strong>: 15 minutes<br>
         <br>
-        Topics Covered:
-		</p></div>
+        <strong>Topics Covered</strong>:
+		M&amp;E frameworks, components of the PMBEF, core indicators, indicators cascades</p></div>
 	</div>
 	</div> 
-	 	 	 <div class="section group">
+	 	 	 <div class="section group"><hr>
 	<div class="col span_1_of_3"><div class="modules"><img src="images/placeholder-photo.png" width="1680" height="840" alt=""/></div></div>
 	<div class="col span_2_of_3">
 	  <div class="modules">
 	  <h3>MODULE: 3: Data Quality, Anaysis, and Interpretation</h3>
-	  <p>Time to Complete: 45 minutes<br>
+	  <p><strong id="yui_3_17_2_1_1686784079798_2">🕓</strong><strong> Time to Complete</strong>: 45 minutes<br>
         <br>
-Topics Covered: Cascade Analysis, root cause analysis, etc.</p>
+        <strong>Topics Covered:</strong> Cascade Analysis, root cause analysis, etc.</p>
 	</div></div>
-	</div> 
+	</div> <hr>
 	 	 	 <div class="section group">
 	<div class="col span_1_of_3"><div class="modules"><img src="images/placeholder-photo.png" width="1680" height="840" alt=""/></div></div>
 	<div class="col span_2_of_3">
 	  <div class="modules">
 	  <h3>MODULE 4: Data Communication and Use</h3>
-	  <p>Time to Complete: 45 minutes<br>
+	  <p><strong id="yui_3_17_2_1_1686784079798_3">🕓</strong><strong> Time to Complete</strong> 45 minutes<br>
 	    <br>
-	    Topics Covered: Cascade Analysis, root cause analysis, etc.</p>
+	    <strong>Topics Covered:</strong> Stakeholder buy-in, cascade analysis, root cause analysis, etc.</p>
     </div>
-		</div></div>  
+		</div></div>  <hr>
+	  	 	 	 <div class="section group">
+	<div class="col span_1_of_3"><div class="modules"><img src="images/placeholder-photo.png" width="1680" height="840" alt=""/></div></div>
+	<div class="col span_2_of_3">
+	  <div class="modules">
+	  <h3>Final Exam and Course Evaluation</h3>
+	  <p><strong id="yui_3_17_2_1_1686784079798_3">🕓</strong><strong> Time to Complete: </strong>15 minutes<br>
+	    <br>
+	    <strong>Topics Covered:</strong> Stakeholder buy-in, cascade analysis, root cause analysis, etc.</p>
+    </div>
+		</div></div> 
 </div></div>
 <br>
 	<div class="play_box">
