links and breadcrumbs

--- a/your-progress.html
+++ b/your-progress.html
@@ -16,25 +16,26 @@
 <meta name="viewport" content="width=device-width, user-scalable=no"/>
 </head>
 <body>
-<div id="banner"></div>
+<div id="banner"><img alt="logos" src="images/USAID_TB DIAH_vert.svg"></div>
 <div id="content">
-<div class="progress-container">
-  <h1>Your Progress</h1>
-
+	<div class="progress-container">
   <input type="radio" class="radio" name="progress" value="zero" id="zero" checked>
-  <label for="zero" class="label">Self-Assessment</label>
+  <label for="zero" class="label">Progress</label>
   
   <input type="radio" class="radio" name="progress" value="twenty" id="twenty">
-  <label for="twenty" class="label">Optional <br>Pre-Readings</label>
+  <label for="twenty" class="label"></label>
   
   <input type="radio" class="radio" name="progress" value="forty" id="forty">
-  <label for="forty" class="label">Complete Coursework</label>
+  <label for="forty" class="label"></label>
   
   <input type="radio" class="radio" name="progress" value="sixty" id="sixty">
-  <label for="sixty" class="label">Course Evaluation</label>
+  <label for="sixty" class="label"></label>
   
   <input type="radio" class="radio" name="progress" value="eighty" id="eighty">
-  <label for="eighty" class="label">Receive Your Certificate</label>
+  <label for="eighty" class="label"></label>
+	 <input type="radio" class="radio" name="progress" value="eighty" id="hundred">
+  <label for="hundred" class="label"></label>
+
 	  <div class="progress">
     <div class="progress-bar"></div>
   </div>
