--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ s0.parentNode.insertBefore(s1,s0);
 </head>
 <body>
 <div id="banner">
-	<div class="content"><img alt="logos" src="images/USAID_TB DIAH_vert.svg"> <div id="languages"> EN | FR | PT | RU </div>
+	<div class="content"><img alt="logos" src="images/USAID_TB DIAH_vert.svg"> <div id="languages"> <a href="index.html">EN</a> | FR | PT | RU </div>
 		  </div></div>
 <div id="course-banner">
 <div class="content">	<h1>Tuberculosis Monitoring, Evaluation and Surveillance</h1>
