--- a/resources.html
+++ b/resources.html
@@ -30,8 +30,8 @@ s0.parentNode.insertBefore(s1,s0);
 </head>
 <body>
 <div id="banner">
-  <div class="content"><img alt="logos" src="images/USAID_TB DIAH_vert.svg">
-    <div id="languages"> EN | FR | PT | RU </div>
+  <div class="content"><a href="index.html"><img alt="logos" src="images/USAID_TB DIAH_vert.svg"></a>
+    <div id="languages"> <a href="index.html">EN</a> | FR | PT | RU </div>
   </div>
 </div>
 <div id="course-banner">
@@ -45,7 +45,7 @@ s0.parentNode.insertBefore(s1,s0);
 	<div id="breadcrumbs"> <a href="index.html">Course Home</a> »  Pre-Reading </div>
 
 <h2>Optional Pre-Reading</h2>
-	<p> If you scored below 50 on your self-assessment, you may wan to review the resources below. Some of these resources will also be available in the course.</p>
+	<p> If you scored below 50 on your self-assessment, you may want to review the resources below. Some of these resources will also be available in the course.</p>
 	<div class="accordion">
   <div class="accordion-item">
     <div class="accordion-header">
