--- a/self-assessment.html
+++ b/self-assessment.html
@@ -19,8 +19,8 @@
 </head>
 <body>
 <div id="banner">
-  <div class="content"><img alt="logos" src="images/USAID_TB DIAH_vert.svg">
-    <div id="languages"> EN | FR | PT | RU </div>
+  <div class="content"><a href="index.html"><img alt="logos" src="images/USAID_TB DIAH_vert.svg"></a>
+    <div id="languages"> <a href="index.html">EN</a> | FR | PT | RU </div>
   </div>
 </div>
 <div id="course-banner">
@@ -28,10 +28,16 @@
 	<h2>Using a Performance-based M&amp;E Framework to Strengthen TB Programming</h2>
 </div>
 </div>
-<div class="content">
-  <h4><br>
-    TIME TO COMPLETE: 5-10 minutes
-	</h4>
+<div class="content"><br>
+
+  <div id="breadcrumbs"> <a href="index.html">Course Home</a> »  Self- Assessment </div>
+	
+  <h4>TIME TO COMPLETE: 5-10 minutes <br>
+  </h4>
+<p>Please take a few minutes to provide some details about yourself and complete a brief self-assessment to prepare you for the online course.
+  You will also have an opportunity to establish personal learning goals  and explore hand-picked resources related to TB M&E and surveillance. <br>
+  <br>
+  <em>Note: It may take a few seconds to load depending on your network connection.</em></p>
 <iframe data-tally-src="https://tally.so/embed/mYRkjB?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="1868" frameborder="0" marginheight="0" marginwidth="0" title="Using a Performance-based M&E Framework to Strengthen TB Programming"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
   
 </div>
