--- a/index.html
+++ b/index.html
@@ -32,20 +32,19 @@ s0.parentNode.insertBefore(s1,s0);
 </head>
 <body>
 <div id="banner">
-	<div class="content"><img alt="logos" src="images/USAID_TB DIAH_vert.svg"> <div id="languages"> <a href="index.html">EN</a> | FR | PT | RU </div>
+	<div class="content"><a href="index.html"><img alt="logos" src="images/USAID_TB DIAH_vert.svg"></a> 
+	  <div id="languages"> <a href="index.html">EN</a> | FR | PT | RU </div>
 		  </div></div>
 <div id="course-banner">
 <div class="content">	<h1>Tuberculosis Monitoring, Evaluation and Surveillance</h1>
-	<h2>Using a Performance-based M&amp;E Framework to Strengthen TB Programming</h2>
+	<h2>Using a Performance-based Monitoring and Evaluation Framework to Strengthen Tuberculosis Programming</h2>
 </div>
 </div>
 <div class="content">
 <div id="playbook">
-  <p>This online learning experience is designed for dedicated professionals working to end TB in their countries. It provides essential information and guidance on how to effectively monitor and evaluate the performance of TB programs using a performance-based framework.
-    
-    This course requires a basic understanding of TB M&E and surveillance systems and explores how a performance-based M&E framework with standardized, high-quality indicators can improve the generation of quality data and support the analysis, interpretation and use of that data to inform programming, identify gaps, and strengthen the overall system.    </p>
-  <p><strong>START</strong> with a quick <a href="self-assessment.html" target="_blank">self - assessment</a> and check out the <a href="resources.html">pre-readings</a> organized by topic area.<br>
-  </p>
+  <p>This online learning  experience is designed for dedicated professionals working to end tuberculosis  (TB) in their countries. It provides essential information and guidance on how  to effectively monitor and evaluate the performance of TB programs using a performance-based  framework. This course requires a basic understanding of TB monitoring and  evaluation (M&amp;E) and surveillance systems and explores how a  performance-based M&amp;E framework (PBMEF) with standardized, high-quality  indicators can improve the generation of quality data and support the analysis,  interpretation, and use of that data to inform programming, identify gaps, and  strengthen the overall system.</p>
+<p><strong>START</strong> with a quick <a href="self-assessment.html" target="_blank">self - assessment</a> and check out the <a href="resources.html">pre-readings</a> organized by topic area.<br>
+</p>
 </div>
 <br>
 	 <h2>Course Sections</h2>
@@ -63,7 +62,7 @@ s0.parentNode.insertBefore(s1,s0);
 	 	 	<hr> <div class="section group">
 	<div class="col span_1_of_3"><div class="modules"><img src="images/placeholder-photo.png" width="1680" height="840" alt=""/></div></div>
 	<div class="col span_2_of_3"><div class="modules">
-      <h3>MODULE 2: Use Performance-Based M&amp;E Framework to Stregthen TB Programs</h3>
+      <h3>MODULE 2: Using a Performance-Based M&amp;E Framework to Stregthen TB Programs</h3>
       <p><strong id="yui_3_17_2_1_1686784079798_">🕓</strong><strong> Time to Complete</strong>: 15 minutes<br>
         <br>
         <strong>Topics Covered</strong>:
@@ -77,7 +76,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  <h3>MODULE: 3: Data Quality, Anaysis, and Interpretation</h3>
 	  <p><strong id="yui_3_17_2_1_1686784079798_2">🕓</strong><strong> Time to Complete</strong>: 45 minutes<br>
         <br>
-        <strong>Topics Covered:</strong> Cascade Analysis, root cause analysis, etc.</p>
+        <strong>Topics Covered:</strong> Components of data quality, data analysis, cascade analysis, root cause analysis</p>
 	</div></div>
 	</div> <hr>
 	 	 	 <div class="section group">
@@ -87,7 +86,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  <h3>MODULE 4: Data Communication and Use</h3>
 	  <p><strong id="yui_3_17_2_1_1686784079798_3">🕓</strong><strong> Time to Complete</strong> 45 minutes<br>
 	    <br>
-	    <strong>Topics Covered:</strong> Stakeholder buy-in, cascade analysis, root cause analysis, etc.</p>
+	    <strong>Topics Covered:</strong>Stakeholder buy-in, disseminating M&amp;E results, barriers to data use</p>
     </div>
 		</div></div>  <hr>
 	  	 	 	 <div class="section group">
