--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ s0.parentNode.insertBefore(s1,s0);
 	 <h2>Course Sections</h2>
   <div class="section group"> 
 	 	 <div class="section group">
-	<div class="col span_1_of_3"><div class="modules"><img src="images/m1-photo.jpg" width="1680" height="840" alt=""/></div></div>
+	<div class="col span_1_of_3"><div class="modules"><img src="images/mod1.png" alt=""/></div></div>
 	<div class="col span_2_of_3">
 	  <div class="modules">
 	    <h3>MODULE 1: TB M&amp;E: An Overview</h3>
@@ -60,7 +60,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  </div></div>
 	</div> 
 	 	 	<hr> <div class="section group">
-	<div class="col span_1_of_3"><div class="modules"><img src="images/placeholder-photo.png" width="1680" height="840" alt=""/></div></div>
+	<div class="col span_1_of_3"><div class="modules"><img src="images/mod3.png" width="1024" height="632" alt=""/></div></div>
 	<div class="col span_2_of_3"><div class="modules">
       <h3>MODULE 2: Using a Performance-Based M&amp;E Framework to Stregthen TB Programs</h3>
       <p><strong id="yui_3_17_2_1_1686784079798_">🕓</strong><strong> Time to Complete</strong>: 15 minutes<br>
