--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ s0.parentNode.insertBefore(s1,s0);
 	    <h3>MODULE 1: TB M&amp;E: An Overview</h3>
 	    <p><strong id="yui_3_17_2_1_1686784079798_20">🕓</strong><strong> Time to Complete</strong>: 15 minutes</p>
 	    <p><strong>Topics Covered</strong>: Basic epidemiology of TB, TB case definitions, global TB strategies and targets, M&amp;E frameworks</p>
-		  <a class="button" href="https://360.articulate.com/review/content/d0ef2cc6-08bc-4b2c-87fc-4af0faa43334/review">View Module</a>
+		  <a class="button" href="module-1/index.html">View Module</a>
 	  </div></div>
 	</div> 
 	 	 	<hr> <div class="section group">
