--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  </div></div>
 	</div> 
 	 	 	<hr> <div class="section group">
-	<div class="col span_1_of_3"><div class="modules"><img src="images/mod3.png" width="1024" height="632" alt=""/></div></div>
+	<div class="col span_1_of_3"><div class="modules"><img src="images/placeholder-photo.png" alt="placeholder"/></div></div>
 	<div class="col span_2_of_3"><div class="modules">
       <h3>MODULE 2: Using a Performance-Based M&amp;E Framework to Stregthen TB Programs</h3>
       <p><strong id="yui_3_17_2_1_1686784079798_">🕓</strong><strong> Time to Complete</strong>: 15 minutes<br>
