fixed spelling issues

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ s0.parentNode.insertBefore(s1,s0);
 	 	 	<hr> <div class="section group">
 	<div class="col span_1_of_3"><div class="modules"><img src="images/placeholder-photo.png" alt="placeholder"/></div></div>
 	<div class="col span_2_of_3"><div class="modules">
-      <h3>MODULE 2: Using a Performance-Based M&amp;E Framework to Stregthen TB Programs</h3>
+      <h3>MODULE 2: Using a Performance-Based M&amp;E Framework to Strengthen TB Programs</h3>
       <p><strong id="yui_3_17_2_1_1686784079798_">🕓</strong><strong> Time to Complete</strong>: 15 minutes<br>
         <br>
         <strong>Topics Covered</strong>:
@@ -73,7 +73,7 @@ s0.parentNode.insertBefore(s1,s0);
 	<div class="col span_1_of_3"><div class="modules"><img src="images/placeholder-photo.png" width="1680" height="840" alt=""/></div></div>
 	<div class="col span_2_of_3">
 	  <div class="modules">
-	  <h3>MODULE: 3: Data Quality, Anaysis, and Interpretation</h3>
+	  <h3>MODULE: 3: Data Quality, Analysis, and Interpretation</h3>
 	  <p><strong id="yui_3_17_2_1_1686784079798_2">🕓</strong><strong> Time to Complete</strong>: 45 minutes<br>
         <br>
         <strong>Topics Covered:</strong> Components of data quality, data analysis, cascade analysis, root cause analysis</p>
