--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@ s0.parentNode.insertBefore(s1,s0);
 <div class="content">
 <div id="playbook">
   <p>This online learning  experience is designed for dedicated professionals working to end tuberculosis  (TB) in their countries. It provides essential information and guidance on how  to effectively monitor and evaluate the performance of TB programs using a performance-based  framework. This course requires a basic understanding of TB monitoring and  evaluation (M&amp;E) and surveillance systems and explores how a  performance-based M&amp;E framework (PBMEF) with standardized, high-quality  indicators can improve the generation of quality data and support the analysis,  interpretation, and use of that data to inform programming, identify gaps, and  strengthen the overall system.</p>
+  <p>Don't have time to read, listen here:<br>
+<audio controls>
+  <source src="intro.mp3" type="audio/mp3">
+  Your browser does not support the audio tag.
+</audio>
 <p><strong>START</strong> with a quick <a href="self-assessment.html" target="_blank">self - assessment</a> and check out the <a href="resources.html">pre-readings</a> organized by topic area.<br>
 </p>
 </div>
