--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ s0.parentNode.insertBefore(s1,s0);
 	<div class="content"><a href="index.html"><img alt="logos" src="images/USAID_TB DIAH_vert.svg"></a> 
 	  <div id="languages"> <a href="index.html">EN</a> | FR | PT | RU </div>
 		  </div></div>
-<div id="course-banner">
+<div id="course-banner"><img src="images/web-banner2.png" width="100%" height="auto" alt="images of doctrs"/>
 <div class="content">	<h1>Tuberculosis Monitoring, Evaluation and Surveillance</h1>
 	<h2>Using a Performance-based Monitoring and Evaluation Framework to Strengthen Tuberculosis Programming</h2>
 </div>
