updated banner - new nurse

--- a/resources.html
+++ b/resources.html
@@ -34,7 +34,7 @@ s0.parentNode.insertBefore(s1,s0);
     <div id="languages"> <a href="index.html">EN</a> | FR | PT | RU </div>
   </div>
 </div>
-<div id="course-banner">
+<div id="course-banner"><img src="images/web-banner2.png" width="100%" height="auto" alt="illustration of health care workers and data analyists from around the world"/>
   <div class="content">
     <h1>Tuberculosis Monitoring, Evaluation and Surveillance</h1>
     <h2>Using a Performance-based M&amp;E Framework to Strengthen TB Programming</h2>
