--- a/self-assessment.html
+++ b/self-assessment.html
@@ -23,7 +23,7 @@
     <div id="languages"> <a href="index.html">EN</a> | FR | PT | RU </div>
   </div>
 </div>
-<div id="course-banner">
+	<div id="course-banner"><img src="images/web-banner2.png" width="100%" height="auto" alt="illustration of health care workers and data analyists from around the world"/>
 <div class="content">	<h1>TB M&amp;E e-Learning: Self-Assessment</h1>
 	<h2>Using a Performance-based M&amp;E Framework to Strengthen TB Programming</h2>
 </div>
