script for survey

--- a/module-1/index.html
+++ b/module-1/index.html
@@ -15,7 +15,7 @@
     <script type="text/javascript">
       window.resizeTo(screen.width, screen.height);
     </script>
-    
+    <script async src="https://tally.so/widgets/embed.js"></script>
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
