--- a/index.html
+++ b/index.html
@@ -40,13 +40,25 @@ s0.parentNode.insertBefore(s1,s0);
 	<h2>Using a Performance-based Monitoring and Evaluation Framework to Strengthen Tuberculosis Programming</h2>
 </div>
 </div>
+	
 <div class="content">
-<div id="playbook">
-  <p>This online learning  experience is designed for dedicated professionals working to end tuberculosis  (TB) in their countries. It provides essential information and guidance on how  to effectively monitor and evaluate the performance of TB programs using a performance-based  framework. This course requires a basic understanding of TB monitoring and  evaluation (M&amp;E) and surveillance systems and explores how a  performance-based M&amp;E framework (PBMEF) with standardized, high-quality  indicators can improve the generation of quality data and support the analysis,  interpretation, and use of that data to inform programming, identify gaps, and  strengthen the overall system.</p>
-<p><strong>START</strong> with a quick <a href="self-assessment.html" target="_blank">self - assessment</a> and check out the <a href="resources.html">pre-readings</a> organized by topic area.<br>
-</p>
+<div id="playbook"><br>
+
+  <p>This online learning  experience is designed for dedicated professionals working to end tuberculosis  (TB) in their countries. It requires a basic understanding of TB monitoring and  evaluation (M&amp;E) and surveillance systems and explores how USAID's  performance-based M&amp;E framework (PBMEF) with standardized, high-quality  indicators can improve the generation of quality data and support the analysis,  interpretation, and use of that data to inform programming, identify gaps, and  strengthen the overall system.</p>
+<p><strong>Course Objectives:</strong></p>
+<ul>
+  <li>Explain how the performance-based monitoring and evaluation  framework (PBMEF) with standardized indicators can strengthen a TB program by identifying gaps and charting paths toward improving the diagnosis, care,  treatment, and prevention of TB</li>
+  <li>Align a selection of standardized TB indicators with your country’s National Strategic Plan and/or programmatic priorities</li>
+  <li>Apply cascade analysis to identify operational issues that are preventing a TB program from achieving intended targets, goals and objectives, and suggest strategies to address them</li>
+  <li>Analyze, interpret, and synthesize TB data to develop M&amp;E reports with relevant visuals to engage stakeholders, and inform programmatic and policy decisions</li>
+  <li>Create a presentation for stakeholders using TB data to recommend programmatic changes and address questions</li>
+  <li>Feel empowered/committed as an individual to make objective changes using PBMEF data to  improve the TB M&amp;E system in the country where you work</li>
+</ul>
 </div>
 <br>
+	<div style="widith: 90%; margin: auto; border: 1px solid; background: #eee; padding: 20px"><strong>START</strong> with a quick <a href="self-assessment.html" target="_blank">self - assessment</a> and check out the <a href="resources.html">pre-readings</a> organized by topic area.
+</div><br>
+
 	 <h2>Course Sections</h2>
   <div class="section group"> 
 	 	 <div class="section group">
@@ -74,7 +86,7 @@ s0.parentNode.insertBefore(s1,s0);
 	<div class="col span_2_of_3">
 	  <div class="modules">
 	  <h3>MODULE: 3: Data Quality, Analysis, and Interpretation</h3>
-	  <p><strong id="yui_3_17_2_1_1686784079798_2">🕓</strong><strong> Time to Complete</strong>: 45 minutes<br>
+	  <p><strong>🕓 Time to Complete</strong>: 45 minutes<br>
         <br>
         <strong>Topics Covered:</strong> Components of data quality, data analysis, cascade analysis, root cause analysis</p>
 	</div></div>
@@ -84,7 +96,7 @@ s0.parentNode.insertBefore(s1,s0);
 	<div class="col span_2_of_3">
 	  <div class="modules">
 	  <h3>MODULE 4: Data Communication and Use</h3>
-	  <p><strong id="yui_3_17_2_1_1686784079798_3">🕓</strong><strong> Time to Complete</strong> 45 minutes<br>
+	  <p><strong>🕓</strong><strong> Time to Complete</strong> 45 minutes<br>
 	    <br>
 	    <strong>Topics Covered:</strong>Stakeholder buy-in, disseminating M&amp;E results, barriers to data use</p>
     </div>
@@ -94,7 +106,7 @@ s0.parentNode.insertBefore(s1,s0);
 	<div class="col span_2_of_3">
 	  <div class="modules">
 	  <h3>Final Exam and Course Evaluation</h3>
-	  <p><strong id="yui_3_17_2_1_1686784079798_3">🕓</strong><strong> Time to Complete: </strong>15 minutes<br>
+	  <p><strong>🕓</strong><strong> Time to Complete: </strong>15 minutes<br>
 	    <br>
 	    <strong>Topics Covered:</strong> Stakeholder buy-in, cascade analysis, root cause analysis, etc.</p>
     </div>
