Add accordian to objectives

--- a/index.html
+++ b/index.html
@@ -45,18 +45,26 @@ s0.parentNode.insertBefore(s1,s0);
 <div id="playbook"><br>
 
   <p>This online learning  experience is designed for dedicated professionals working to end tuberculosis  (TB) in their countries. It requires a basic understanding of TB monitoring and  evaluation (M&amp;E) and surveillance systems and explores how USAID's  performance-based M&amp;E framework (PBMEF) with standardized, high-quality  indicators can improve the generation of quality data and support the analysis,  interpretation, and use of that data to inform programming, identify gaps, and  strengthen the overall system.</p>
-<p><strong>Course Objectives:</strong></p>
-<ul>
+  <div class="accordion-item">
+    <div class="accordion-header">
+      <h3>View Course Objectives</h3>
+      <span class="accordion-icon"></span>
+    </div>
+
+    <div class="accordion-content">
+	<p>After completing this course, you will be able to:</p>	<ul>
   <li>Explain how the performance-based monitoring and evaluation  framework (PBMEF) with standardized indicators can strengthen a TB program by identifying gaps and charting paths toward improving the diagnosis, care,  treatment, and prevention of TB</li>
   <li>Align a selection of standardized TB indicators with your country’s National Strategic Plan and/or programmatic priorities</li>
   <li>Apply cascade analysis to identify operational issues that are preventing a TB program from achieving intended targets, goals and objectives, and suggest strategies to address them</li>
   <li>Analyze, interpret, and synthesize TB data to develop M&amp;E reports with relevant visuals to engage stakeholders, and inform programmatic and policy decisions</li>
   <li>Create a presentation for stakeholders using TB data to recommend programmatic changes and address questions</li>
   <li>Feel empowered/committed as an individual to make objective changes using PBMEF data to  improve the TB M&amp;E system in the country where you work</li>
-</ul>
+</ul></div>
+</div>	
 </div>
 <br>
-	<div style="widith: 90%; margin: auto; border: 1px solid; background: #eee; padding: 20px"><strong>START</strong> with a quick <a href="self-assessment.html" target="_blank">self - assessment</a> and check out the <a href="resources.html">pre-readings</a> organized by topic area.
+	<div style="widith: 90%; margin: auto; border: 1px solid #ccc; border-radius: 3px; background: #f9f9f9; padding: 5px 20px 20px 20px"><h3>START HERE</h3>
+	  Take a quick <a href="self-assessment.html">self - assessment</a> and check out the <a href="resources.html">pre-readings</a> organized by topic area.
 </div><br>
 
 	 <h2>Course Sections</h2>
@@ -142,6 +150,6 @@ s0.parentNode.insertBefore(s1,s0);
   <div class="content"><p>The TB DIAH project is part of USAID's performance-based measures to end TB—the Global Accelerator to End Tuberculosis. The  <a href="https://www.tbdiah.org/" target="_blank" rel="noreferrer noopener">TB DIAH website</a> features a data hub, guidance, and tools to support the work of the   global TB community. TB DIAH makes possible optimal analysis and use of   TB data to inform national TB programs, policies, and USAID-supported   interventions. <br>
 	    <br>
 This information was produced with the support of the <a href="https://www.usaid.gov/" target="_blank" rel="noreferrer noopener">United States Agency for International Development (USAID)</a> under the terms of the TB Data, Impact Assessment and Communications   Hub (TB DIAH) Associate Award No. 7200AA18LA00007. TB DIAH is   implemented by the University of North Carolina at Chapel Hill, in   partnership with John Snow, Inc. Views expressed are not necessarily   those of USAID or the United States government. </p></div></div>
-
+      <script src="accordion.js" type="text/javascript"></script>	
 </body>
 </html>
