new links and styles

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@ s0.parentNode.insertBefore(s1,s0);
 <div class="content">
 <div id="playbook"><br>
 
+  <h3>Course Description</h3>
   <p>This online learning  experience is designed for dedicated professionals working to end tuberculosis  (TB) in their countries. It requires a basic understanding of TB monitoring and  evaluation (M&amp;E) and surveillance systems and explores how USAID's  performance-based M&amp;E framework (PBMEF) with standardized, high-quality  indicators can improve the generation of quality data and support the analysis,  interpretation, and use of that data to inform programming, identify gaps, and  strengthen the overall system.</p>
   <div class="accordion-item">
-    <div class="accordion-header">
-      <h3>View Course Objectives</h3>
+    <div class="accordion-header"><h3>Course Objectives</h3>
       <span class="accordion-icon"></span>
     </div>
 
@@ -76,7 +76,7 @@ s0.parentNode.insertBefore(s1,s0);
 	    <h3>MODULE 1: TB M&amp;E: An Overview</h3>
 	    <p><strong id="yui_3_17_2_1_1686784079798_20">🕓</strong><strong> Time to Complete</strong>: 15 minutes</p>
 	    <p><strong>Topics Covered</strong>: Basic epidemiology of TB, TB case definitions, global TB strategies and targets, M&amp;E frameworks</p>
-		  <a class="button" href="module-1/index.html">View Module</a>
+		  <a class="button" href="https://360.articulate.com/review/content/d0ef2cc6-08bc-4b2c-87fc-4af0faa43334/review">View Module</a>
 	  </div></div>
 	</div> 
 	 	 	<hr> <div class="section group">
