--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@ s0.parentNode.insertBefore(s1,s0);
 </div>
 <br>
 	<div style="widith: 90%; margin: auto; border: 1px solid #ccc; border-radius: 3px; background: #f9f9f9; padding: 5px 20px 20px 20px"><h3>START HERE</h3>
-	  Take a quick <a href="self-assessment.html">self - assessment</a> and check out the <a href="resources.html">pre-readings</a> organized by topic area.
-</div><br>
+	  <p>Take a quick <a href="self-assessment.html">self - assessment</a> and check out the <a href="resources.html">pre-readings</a> organized by topic area.
+      </p>
+	  <p><strong>New to TB?</strong> Check out our mini-module on Basic Epidmilology of TB and download the latest TB Case Definitions.</p>
+  </div><br>
 
 	 <h2>Course Sections</h2>
   <div class="section group"> 
@@ -75,7 +77,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  <div class="modules">
 	    <h3>MODULE 1: TB M&amp;E: An Overview</h3>
 	    <p><strong id="yui_3_17_2_1_1686784079798_20">🕓</strong><strong> Time to Complete</strong>: 15 minutes</p>
-	    <p><strong>Topics Covered</strong>: Basic epidemiology of TB, TB case definitions, global TB strategies and targets, M&amp;E frameworks</p>
+	    <p><strong>Topics Covered</strong>: Global TB strategies and targets, M&amp;E frameworks and how patient pathways inform TB performance indicators</p>
 		  <a class="button" href="https://360.articulate.com/review/content/d0ef2cc6-08bc-4b2c-87fc-4af0faa43334/review">View Module</a>
 	  </div></div>
 	</div> 
@@ -86,7 +88,7 @@ s0.parentNode.insertBefore(s1,s0);
       <p><strong id="yui_3_17_2_1_1686784079798_">🕓</strong><strong> Time to Complete</strong>: 15 minutes<br>
         <br>
         <strong>Topics Covered</strong>:
-		M&amp;E frameworks, components of the PMBEF, core indicators, indicators cascades</p></div>
+		Components of USAID's performance-based M&amp;E frameworks, deep dive into 10 core indicators, indicators cascades</p></div>
 	</div>
 	</div> 
 	 	 	 <div class="section group"><hr>
