Added new resources to Resource page

--- a/resources.html
+++ b/resources.html
@@ -58,6 +58,8 @@ s0.parentNode.insertBefore(s1,s0);
   <li><a href="https://www.usaid.gov/global-health/health-areas/tuberculosis/resources/publications/usaid-global-tuberculosis-strategy-2023-2030" target="_blank">USAID&rsquo;s  Global Tuberculosis (TB) Strategy</a></li>
   <li><a href="https://www.stoptb.org/advocacy-and-communications/unhlm-tb-key-targets-and-commitments" target="_blank">UN  High-Level Meeting on TB Key Targets &amp; Commitments (6 languages)</a></li>
   <li><a href="https://www.who.int/publications/i/item/WHO-HTM-TB-2015.19" target="_blank">World  Health Organization (WHO): The End TB Strategy</a></li>
+  <li><a href="Tuberculosis-Case-Definitions.pdf" target="_blank">TB Case Definitions</a></li>
+	
 </ul>
 <p><strong>Good to Know:</strong></p>
 <ul>
