--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ s0.parentNode.insertBefore(s1,s0);
 	<div style="widith: 90%; margin: auto; border: 1px solid #ccc; border-radius: 3px; background: #f9f9f9; padding: 5px 20px 20px 20px"><h3>START HERE</h3>
 	  <p>Take a quick <a href="self-assessment.html">self - assessment</a> and check out the <a href="resources.html">pre-readings</a> organized by topic area.
       </p>
-	  <p><strong>New to TB?</strong> Check out our mini-module on <a href="https://360.articulate.com/review/content/1f72cd66-2f57-444a-8873-90dbfaa8860a/review" target="_blank">Basic Epidmilology of TB</a> and download the latest <a href="Tuberculosis-Case-Definitions.pdf" target="_blank">TB Case Definitions (PDF)</a>.</p>
+	  <p><strong>New to TB?</strong> Check out our mini-module on <a href="https://360.articulate.com/review/content/1f72cd66-2f57-444a-8873-90dbfaa8860a/review" target="_blank">Basic Epidemiology of TB</a> and download the latest <a href="Tuberculosis-Case-Definitions.pdf" target="_blank">TB Case Definitions (PDF)</a>.</p>
   </div><br>
 
 	 <h2>Course Sections</h2>
