--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@ s0.parentNode.insertBefore(s1,s0);
 	<div class="col span_1_of_3"><div class="modules"><img src="images/mod1.png" alt=""/></div></div>
 	<div class="col span_2_of_3">
 	  <div class="modules">
-	    <h3>MODULE 1: TB M&amp;E: An Overview</h3>
-	    <p><strong id="yui_3_17_2_1_1686784079798_20">🕓</strong><strong> Time to Complete</strong>: 15 minutes</p>
+	    <h3 id="m1">MODULE 1: TB M&amp;E: An Overview</h3>
+	    <p><strong id="yui_3_17_2_1_1686784079798_20">🕓</strong><strong> Time to Complete</strong>: 10 minutes</p>
 	    <p><strong>Topics Covered</strong>: Global TB strategies and targets, M&amp;E frameworks and how patient pathways inform TB performance indicators</p>
 		  <a class="button" href="https://360.articulate.com/review/content/d0ef2cc6-08bc-4b2c-87fc-4af0faa43334/review">View Module</a>
 	  </div></div>
@@ -84,8 +84,8 @@ s0.parentNode.insertBefore(s1,s0);
 	 	 	<hr> <div class="section group">
 	<div class="col span_1_of_3"><div class="modules"><img src="images/mod2.png" alt="placeholder"/></div></div>
 	<div class="col span_2_of_3"><div class="modules">
-      <h3>MODULE 2: Using a Performance-Based M&amp;E Framework to Strengthen TB Programs</h3>
-      <p><strong id="yui_3_17_2_1_1686784079798_">🕓</strong><strong> Time to Complete</strong>: 15 minutes<br>
+      <h3 id="m2">MODULE 2: Using a Performance-Based M&amp;E Framework to Strengthen TB Programs</h3>
+      <p><strong id="yui_3_17_2_1_1686784079798_">🕓</strong><strong> Time to Complete</strong>: 20 minutes<br>
         <br>
         <strong>Topics Covered</strong>:
 		Components of USAID's performance-based M&amp;E frameworks, deep dive into 10 core indicators, indicators cascades</p></div>
@@ -95,7 +95,7 @@ s0.parentNode.insertBefore(s1,s0);
 	<div class="col span_1_of_3"><div class="modules"><img src="images/mod3.png" width="1024" height="632" alt=""/></div></div>
 	<div class="col span_2_of_3">
 	  <div class="modules">
-	  <h3>MODULE: 3: Data Quality, Analysis, and Interpretation</h3>
+	  <h3 id="m3">MODULE: 3: Data Quality, Analysis, and Interpretation</h3>
 	  <p><strong>🕓 Time to Complete</strong>: 45 minutes<br>
         <br>
         <strong>Topics Covered:</strong> Components of data quality, data analysis, cascade analysis, root cause analysis</p>
@@ -105,7 +105,7 @@ s0.parentNode.insertBefore(s1,s0);
 	<div class="col span_1_of_3"><div class="modules"><img src="images/placeholder-photo.png" width="1680" height="840" alt=""/></div></div>
 	<div class="col span_2_of_3">
 	  <div class="modules">
-	  <h3>MODULE 4: Data Communication and Use</h3>
+	  <h3 id="m4">MODULE 4: Data Communication and Use</h3>
 	  <p><strong>🕓</strong><strong> Time to Complete</strong> 45 minutes<br>
 	    <br>
 	    <strong>Topics Covered:</strong>Stakeholder buy-in, disseminating M&amp;E results, barriers to data use</p>
