--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@ s0.parentNode.insertBefore(s1,s0);
       <p><strong id="yui_3_17_2_1_1686784079798_">🕓</strong><strong> Time to Complete</strong>: 20 minutes<br>
         <br>
         <strong>Topics Covered</strong>:
-		Components of USAID's performance-based M&amp;E frameworks, deep dive into 10 core indicators, indicators cascades</p></div>
+		Components of USAID's performance-based M&amp;E frameworks, deep dive into 10 core indicators, indicators cascades</p>
+		  <a class="button" href="https://360.articulate.com/review/content/0eed2269-12a2-426f-b042-2f2f2e4306a0/review">View Module</a></div>
 	</div>
 	</div> 
 	 	 	 <div class="section group"><hr>
