--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ s0.parentNode.insertBefore(s1,s0);
 	<div class="col span_1_of_3"><div class="modules"><img src="images/mod2.png" alt="placeholder"/></div></div>
 	<div class="col span_2_of_3"><div class="modules">
       <h3 id="m2">MODULE 2: Using a Performance-Based M&amp;E Framework to Strengthen TB Programs</h3>
-      <p><strong id="yui_3_17_2_1_1686784079798_">🕓</strong><strong> Time to Complete</strong>: 20 minutes<br>
+      <p>🕓<strong> Time to Complete</strong>: 20 minutes<br>
         <br>
         <strong>Topics Covered</strong>:
 		Components of USAID's performance-based M&amp;E frameworks, deep dive into 10 core indicators, indicators cascades</p>
@@ -109,7 +109,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  <h3 id="m4">MODULE 4: Data Communication and Use</h3>
 	  <p><strong>🕓</strong><strong> Time to Complete</strong> 45 minutes<br>
 	    <br>
-	    <strong>Topics Covered:</strong>Stakeholder buy-in, disseminating M&amp;E results, barriers to data use</p>
+	    <strong>Topics Covered:</strong> Stakeholder buy-in, disseminating M&amp;E results, barriers to data use</p>
     </div>
 		</div></div>  <hr>
 	  	 	 	 <div class="section group">
@@ -117,10 +117,10 @@ s0.parentNode.insertBefore(s1,s0);
 	<div class="col span_2_of_3">
 	  <div class="modules">
 	  <h3>Final Exam and Course Evaluation</h3>
-	  <p><strong>🕓</strong><strong> Time to Complete: </strong>15 minutes<br>
-	    <br>
-	    <strong>Topics Covered:</strong> Stakeholder buy-in, cascade analysis, root cause analysis, etc.</p>
-    </div>
+	  <p><strong>🕓</strong><strong> Time to Complete: </strong>15 minutes</p>
+	  <p>Pass the final exam and complete the course evaluation to receive a certificate of completion.<br>
+	    </p>
+      </div>
 		</div></div> 
 </div></div>
 <br>
