--- a/index.html
+++ b/index.html
@@ -62,22 +62,28 @@ s0.parentNode.insertBefore(s1,s0);
 </ul></div>
 </div>	
 </div>
-<br>
-	<div style="widith: 90%; margin: auto; border: 1px solid #ccc; border-radius: 3px; background: #f9f9f9; padding: 5px 20px 20px 20px"><h3>START HERE</h3>
-	  <p>Take a quick <a href="self-assessment.html">self - assessment</a> and check out the <a href="resources.html">pre-readings</a> organized by topic area.
-      </p>
-	  <p><strong>New to TB?</strong> Check out our mini-module on <a href="https://360.articulate.com/review/content/1f72cd66-2f57-444a-8873-90dbfaa8860a/review" target="_blank">Basic Epidemiology of TB</a> and download the latest <a href="Tuberculosis-Case-Definitions.pdf" target="_blank">TB Case Definitions (PDF)</a>.</p>
-  </div><br>
+<br><br>
 
 	 <h2>Course Sections</h2>
   <div class="section group"> 
-	 	 <div class="section group">
+	  	 	 <div class="section group">
+	<div class="col span_1_of_3">
+	  <div class="modules"><img src="images/self-assess.png" alt=""/></div></div>
+	<div class="col span_2_of_3">
+	  <div class="modules">
+	    <h3 id="m1">START HERE: Self-Assessment &amp; Pre-Readings</h3>
+	    <p><strong id="yui_3_17_2_1_1686784079798_20">🕓</strong><strong> Time to Complete</strong>: 5-10 minutes</p>
+	    <p>This short readiness survey allows you to see if you are a good fit for this course. You can also set your<strong> learning goals.</strong> After you take the course, check out the <a href="resources.html">pre-readings</a> organized by topic area.</p>
+		  <a class="button" href="https://360.articulate.com/review/content/d0ef2cc6-08bc-4b2c-87fc-4af0faa43334/review">TAKE ASSESSMENT</a>
+	  </div></div>
+	</div><hr>
+    <div class="section group">
 	<div class="col span_1_of_3"><div class="modules"><img src="images/mod1.png" alt=""/></div></div>
 	<div class="col span_2_of_3">
 	  <div class="modules">
 	    <h3 id="m1">MODULE 1: TB M&amp;E: An Overview</h3>
 	    <p><strong id="yui_3_17_2_1_1686784079798_20">🕓</strong><strong> Time to Complete</strong>: 10 minutes</p>
-	    <p><strong>Topics Covered</strong>: Global TB strategies and targets, M&amp;E frameworks and how patient pathways inform TB performance indicators</p>
+	    <p><strong>Topics Covered</strong>: Global TB strategies and targets, M&amp;E frameworks and how patient pathways inform TB performance indicators. <strong>New to TB?</strong> be sure to check out our mini-module on <a href="https://360.articulate.com/review/content/1f72cd66-2f57-444a-8873-90dbfaa8860a/review" target="_blank">Basic Epidemiology of TB</a> and download the latest <a href="Tuberculosis-Case-Definitions.pdf" target="_blank">TB Case Definitions (PDF)</a></p>
 		  <a class="button" href="https://360.articulate.com/review/content/d0ef2cc6-08bc-4b2c-87fc-4af0faa43334/review">View Module</a>
 	  </div></div>
 	</div> 
