--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ s0.parentNode.insertBefore(s1,s0);
   <p>This online learning  experience is designed for dedicated professionals working to end tuberculosis  (TB) in their countries. It requires a basic understanding of TB monitoring and  evaluation (M&amp;E) and surveillance systems and explores how USAID's  performance-based M&amp;E framework (PBMEF) with standardized, high-quality  indicators can improve the generation of quality data and support the analysis,  interpretation, and use of that data to inform programming, identify gaps, and  strengthen the overall system.</p>
   <div class="accordion-item">
     <div class="accordion-header"><h3>Course Objectives</h3>
-      <span class="accordion-icon"></span>
+    <p>After completing this course, you will be able to:</p> <span class="accordion-icon"></span>
     </div>
 
     <div class="accordion-content">
@@ -71,10 +71,10 @@ s0.parentNode.insertBefore(s1,s0);
 	  <div class="modules"><img src="images/self-assess.png" alt=""/></div></div>
 	<div class="col span_2_of_3">
 	  <div class="modules">
-	    <h3 id="m1">START HERE: Self-Assessment &amp; Pre-Readings</h3>
+	    <h3 id="m0">START HERE: Self-Assessment &amp; Pre-Readings</h3>
 	    <p><strong id="yui_3_17_2_1_1686784079798_20">🕓</strong><strong> Time to Complete</strong>: 5-10 minutes</p>
 	    <p>This short readiness survey allows you to see if you are a good fit for this course. You can also set your<strong> learning goals.</strong> After you take the course, check out the <a href="resources.html">pre-readings</a> organized by topic area.</p>
-		  <a class="button" href="https://360.articulate.com/review/content/d0ef2cc6-08bc-4b2c-87fc-4af0faa43334/review">TAKE ASSESSMENT</a>
+		  <a class="button" href="self-assessment.html">TAKE ASSESSMENT</a>
 	  </div></div>
 	</div><hr>
     <div class="section group">
@@ -82,7 +82,7 @@ s0.parentNode.insertBefore(s1,s0);
 	<div class="col span_2_of_3">
 	  <div class="modules">
 	    <h3 id="m1">MODULE 1: TB M&amp;E: An Overview</h3>
-	    <p><strong id="yui_3_17_2_1_1686784079798_20">🕓</strong><strong> Time to Complete</strong>: 10 minutes</p>
+	    <p><strong>🕓</strong><strong> Time to Complete</strong>: 10 minutes</p>
 	    <p><strong>Topics Covered</strong>: Global TB strategies and targets, M&amp;E frameworks and how patient pathways inform TB performance indicators. <strong>New to TB?</strong> be sure to check out our mini-module on <a href="https://360.articulate.com/review/content/1f72cd66-2f57-444a-8873-90dbfaa8860a/review" target="_blank">Basic Epidemiology of TB</a> and download the latest <a href="Tuberculosis-Case-Definitions.pdf" target="_blank">TB Case Definitions (PDF)</a></p>
 		  <a class="button" href="https://360.articulate.com/review/content/d0ef2cc6-08bc-4b2c-87fc-4af0faa43334/review">View Module</a>
 	  </div></div>
