updates to home

--- a/index.html
+++ b/index.html
@@ -46,13 +46,12 @@ s0.parentNode.insertBefore(s1,s0);
 
   <h3>Course Description</h3>
   <p>This online learning  experience is designed for dedicated professionals working to end tuberculosis  (TB) in their countries. It requires a basic understanding of TB monitoring and  evaluation (M&amp;E) and surveillance systems and explores how USAID's  performance-based M&amp;E framework (PBMEF) with standardized, high-quality  indicators can improve the generation of quality data and support the analysis,  interpretation, and use of that data to inform programming, identify gaps, and  strengthen the overall system.</p>
-  <div class="accordion-item">
-    <div class="accordion-header"><h3>Course Objectives</h3>
-    <p>After completing this course, you will be able to:</p> <span class="accordion-icon"></span>
+ <h3>Course Objectives</h3> <div class="accordion-item">
+    <div class="accordion-header">
+<p>After completing this course, you will be able to: <em><strong>(Click to view)</strong></em></p>
+     <span class="accordion-icon"></span>
     </div>
-
-    <div class="accordion-content">
-	<p>After completing this course, you will be able to:</p>	<ul>
+    <div class="accordion-content">	<ul>
   <li>Explain how the performance-based monitoring and evaluation  framework (PBMEF) with standardized indicators can strengthen a TB program by identifying gaps and charting paths toward improving the diagnosis, care,  treatment, and prevention of TB</li>
   <li>Align a selection of standardized TB indicators with your country’s National Strategic Plan and/or programmatic priorities</li>
   <li>Apply cascade analysis to identify operational issues that are preventing a TB program from achieving intended targets, goals and objectives, and suggest strategies to address them</li>
