--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  <div class="modules">
 	    <h3 id="m0">START HERE: Self-Assessment &amp; Pre-Readings</h3>
 	    <p><strong id="yui_3_17_2_1_1686784079798_20">🕓</strong><strong> Time to Complete</strong>: 5-10 minutes</p>
-	    <p>This short readiness survey allows you to see if you are a good fit for this course. You can also set your<strong> learning goals.</strong> After you take the course, check out the <a href="resources.html">pre-readings</a> organized by topic area.</p>
+	    <p>Please take this short self-assessment to check your readiness  for the course. You will receive a readiness score and then you can set your<strong> learning goals.</strong> After you finish, check out the <a href="resources.html">pre-readings</a> organized by topic area.</p>
 		  <a class="button" href="self-assessment.html">TAKE ASSESSMENT</a>
 	  </div></div>
 	</div><hr>
