--- a/self-assessment.html
+++ b/self-assessment.html
@@ -38,7 +38,7 @@
   You will also have an opportunity to establish personal learning goals  and explore hand-picked resources related to TB M&E and surveillance. <br>
   <br>
   <em>Note: It may take a few seconds to load depending on your network connection.</em></p>
-<iframe data-tally-src="https://tally.so/embed/mYRkjB?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="1868" frameborder="0" marginheight="0" marginwidth="0" title="Using a Performance-based M&E Framework to Strengthen TB Programming"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
+<iframe data-tally-src="https://tally.so/embed/mJq8EK?transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="1343" frameborder="0" marginheight="0" marginwidth="0" title="TB M&E Course: Self- Assessment"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
   
 </div>
 	<br>	
