--- a/resources.html
+++ b/resources.html
@@ -87,6 +87,7 @@ s0.parentNode.insertBefore(s1,s0);
       <li><a href="https://www.tbdiah.org/assessments/pbmef/">TB DIAH Knowledge Hub: The  Performance-based Monitoring and Evaluation Framework Resource Page </a></li>
       <li><a href="https://hub.tbdiah.org/pbmef/indicators">TB DIAH  Data Hub: PBMEF Indicators</a></li>
       <li>Interim PBMEF Tuberculosis Indicator Compendium (publication pending)</li>
+		<li>Navigating TB Indicators: A Guide for TB Programs (publication pending)</li>
       <li>National Strategic Plans from the country where you work</li>
     </ul>
     </div>
