--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ s0.parentNode.insertBefore(s1,s0);
     </div>
 		</div></div>  <hr>
 	  	 	 	 <div class="section group">
-	<div class="col span_1_of_3"><div class="modules"><img src="images/placeholder-photo.png" width="1680" height="840" alt=""/></div></div>
+	<div class="col span_1_of_3"><div class="modules"><img src="images/evaluation.png" width="650" height="325" alt=""/></div></div>
 	<div class="col span_2_of_3">
 	  <div class="modules">
 	  <h3>Final Exam and Course Evaluation</h3>
